--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "material-icons": "^0.3.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuesax": "^3.12.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
